mockers_derive/tests/compile-fail/derive_invalid_item.rs
use mockers_derive::mocked;

#[mocked(derive("Clone"))]
trait A {}

fn main() {}
